# Pairion-Client

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONVENTIONS.md  Client-Architecture.md  LICENSE  PC-PostGrok-Audit.md  Pairion-Client-Architecture.md  Pairion-Scene-Architecture.md  README.md  eslint.config.js  index.html  package.json  pairion-client-Audit.md  pairion-client-Scorecard.md  pnpm-lock.yaml  resources.qrc  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: ci.yml
cmake/: check_coverage.cmake  filter_coverage.cmake
docs/: M1-STATUS.md  MODELS.md
docs/demos/: DEMO_PENDING.md
platform/macos/: Info.plist
qml/: Main.qml
qml/Backgrounds/: DarkBackground.qml  GlobeBackground.qml  OsmBackground.qml  SpaceBackground.qml  VfrBackground.qml
qml/Debug/: DebugPanel.qml
qml/HUD/: ContextBackground.qml  DashboardPanel.qml  DashboardPanels.qml  FpsCounter.qml  HemisphereMap.qml  HudLayout.qml  LayerManager.qml  MemoryBrowser.qml  PairionHUD.qml  PipelineHealthIndicator.qml  RingSystem.qml  SceneManager.qml  TopBar.qml  TranscriptStrip.qml
qml/Overlays/: AdsbOverlay.qml  MarkersOverlay.qml  NewsPinsOverlay.qml  WeatherCurrentOverlay.qml  WeatherRadarOverlay.qml
qml/PairionScene/: BackgroundBase.qml  HudLabel.qml  HudPanel.qml  OverlayBase.qml  PairionStyle.qml  SceneBase.qml  qmldir
qml/Scenes/adsb-radar/: AdsbRadarScene.qml  scene.yaml
qml/Scenes/dashboard/: DashboardScene.qml  scene.yaml
qml/Scenes/globe/: GlobeScene.qml  scene.yaml
qml/Scenes/space/: SpaceScene.qml  scene.yaml
resources/: model_manifest.json
scripts/: process_vfr_sectional.py
scripts/install/: README.md  linux-debian.sh  linux-fedora.sh  linux.sh  macos.sh  windows.ps1
src/: App.test.tsx  App.tsx  index.css  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  codec.rs  mod.rs  playback.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/computer_use/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/screen/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/vad/: mod.rs
src-tauri/src/wake/: mod.rs  models.rs
src-tauri/src/ws/: channel.rs  messages.rs  mod.rs
src-tauri/tests/: harness.rs
src/__mocks__/@tauri-apps/: api.ts  plugin-os.ts
src/__mocks__/@tauri-apps/api/: core.ts
src/audio/: README.md  pairion_audio_capture.cpp  pairion_audio_capture.h  pairion_audio_playback.cpp  pairion_audio_playback.h  pairion_opus_decoder.cpp  pairion_opus_decoder.h  pairion_opus_encoder.cpp  pairion_opus_encoder.h  ring_buffer.h
src/cards/: index.ts
src/core/: README.md  constants.h  device_identity.cpp  device_identity.h  model_downloader.cpp  model_downloader.h  onnx_session.cpp  onnx_session.h  version.h.in
src/enrollment/: index.ts
src/hud/: README.md  ScreenCaptureIndicator.test.tsx  ScreenCaptureIndicator.tsx  index.ts
src/lib/: index.ts  logger.test.ts  logger.ts
src/memory/: memory_browser_model.cpp  memory_browser_model.h  memory_client.cpp  memory_client.h
src/onboarding/: index.ts
src/pipeline/: README.md  audio_session_orchestrator.cpp  audio_session_orchestrator.h  pipeline_health_monitor.cpp  pipeline_health_monitor.h
src/protocol/: binary_codec.cpp  binary_codec.h  envelope_codec.cpp  envelope_codec.h  messages.h
src/settings/: README.md  index.ts  settings.cpp  settings.h
src/state/: cardsStore.test.ts  cardsStore.ts  connectionStore.test.ts  connectionStore.ts  connection_state.cpp  connection_state.h  hudStore.test.ts  hudStore.ts  index.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts
src/util/: logger.cpp  logger.h
src/vad/: README.md  silero_vad.cpp  silero_vad.h
src/wake/: README.md  open_wakeword_detector.cpp  open_wakeword_detector.h
src/ws/: pairion_websocket_client.cpp  pairion_websocket_client.h
test/: mock_onnx_session.h  mock_server.cpp  mock_server.h  tst_audio_session_orchestrator.cpp  tst_binary_frame.cpp  tst_connection_state.cpp  tst_constants.cpp  tst_device_identity.cpp  tst_inbound_playback.cpp  tst_integration.cpp  tst_log_batching.cpp  tst_memory_browser_model.cpp  tst_memory_client.cpp  tst_message_codec.cpp  tst_model_downloader.cpp  tst_opus_codec.cpp  tst_pipeline_health_monitor.cpp  tst_ring_buffer.cpp  tst_settings.cpp  tst_silero_vad.cpp  tst_wake_detector.cpp  tst_ws_client_state_machine.cpp
tests/harness/: README.md
