[package]
name = "pairion-client"
version = "0.1.0"
edition = "2021"
description = "Pairion ambient AI HUD — macOS Client"
license = "LicenseRef-Pairion-NC-1.0"

[lib]
name = "pairion_client_lib"
path = "src/lib.rs"

[[bin]]
name = "pairion-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex-lite = "0.1"
thiserror = "2"
# M1: Audio pipeline
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.16"
audiopus = "0.3.0-rc.0"
# M1: ONNX Runtime for wake-word and VAD
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
sha2 = "0.10"
# M1: WebSocket binary frames + outbound channel
bytes = "1"

[dev-dependencies]
tokio-tungstenite = { version = "0.26", features = [] }
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
